--- a/fonts.css
+++ b/fonts.css
@@ -1,18 +1,32 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic,900,900italic,300,300italic&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,latin-ext);
 @import url(https://fonts.googleapis.com/css?family=Cardo:400,400italic,700&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Gentium+Basic:400,400italic,700,700italic);
+
+@import url(https://fonts.googleapis.com/css?family=Questrial);
+@import url(https://fonts.googleapis.com/css?family=ABeeZee:400,400italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
+@import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 .ns7r .highlights {
     font-family: Merriweather;
+}
+.ns7r .place-name,
+.ns7r .time-period{
+    font-family:Lora;
+    font-style: italic;
 }
 .ns7r .card {
     font-family: Merriweather;
     line-height: 1.6em;
 }
-.ns7r .period {
+.ns7r .strips {
     font-size: 95%;
     font-weight: 300;
-    font-style: italic;
 }
-.ns7r .strips {
-    font-size: 93%;
-    font-weight: 300;
+.ns7r h2 {
+     font-family: Oxygen;
+}
+.sidebar{
+    font-family:'Open Sans';
+    font-size:95%
 }
