--- a/fonts.css
+++ b/fonts.css
@@ -4,19 +4,26 @@
 @import url(https://fonts.googleapis.com/css?family=Gentium+Basic:400,400italic,700,700italic);
 
 @import url(https://fonts.googleapis.com/css?family=Questrial);
+@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans);
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+@import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://fonts.googleapis.com/css?family=ABeeZee:400,400italic);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
 @import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
+.ns7r .name {
+    font-family:'Open Sans', sans-serif;
+    font-weight:300;
+}
 .ns7r .highlights {
-    font-family: Merriweather;
+    font-family: Merriweather, serif;
 }
 .ns7r .place-name,
 .ns7r .time-period{
-    font-family:Lora;
+    font-family:Lora, serif;
     font-style: italic;
 }
 .ns7r .card {
-    font-family: Merriweather;
+    font-family: Merriweather, serif;
     line-height: 1.6em;
 }
 .ns7r .strips {
@@ -24,9 +31,15 @@
     font-weight: 300;
 }
 .ns7r h2 {
-     font-family: Oxygen;
+     font-family: Oxygen, sans-serif;
 }
 .sidebar{
-    font-family:'Open Sans';
+    font-family:'Open Sans', sans-serif;
     font-size:95%
+}
+.sidebar strong{
+    font-weight:600;
+}
+.sidebar h3{    
+    font-weight:600;
 }
