--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@
     .ns7r h2 { font-size:175%; }
     .ns7r h4 { font-size:100%; font-weight:700; }
     .sidebar {  }
-    .sidebar h3 { font-size:105%; font-weight:700; }
+    .sidebar h3 { font-size:105%;  }
     .ns7r footer { font-size:90%; }
 }
 /* individual styles */
