--- a/fonts.css
+++ b/fonts.css
@@ -1,45 +1,42 @@
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic,900,900italic,300,300italic&subset=latin,latin-ext);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,latin-ext);
-@import url(https://fonts.googleapis.com/css?family=Cardo:400,400italic,700&subset=latin,latin-ext);
-@import url(https://fonts.googleapis.com/css?family=Gentium+Basic:400,400italic,700,700italic);
-
-@import url(https://fonts.googleapis.com/css?family=Questrial);
-@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans);
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-@import url(https://fonts.googleapis.com/css?family=Lato);
-@import url(https://fonts.googleapis.com/css?family=ABeeZee:400,400italic);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
 @import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro);
 .ns7r .name {
     font-family:'Open Sans', sans-serif;
     font-weight:300;
 }
 .ns7r .highlights {
-    font-family: Merriweather, serif;
+    font-family:Merriweather, serif;
 }
 .ns7r .place-name,
-.ns7r .time-period{
+.ns7r .time-period {
     font-family:Lora, serif;
-    font-style: italic;
+    font-style:italic;
 }
 .ns7r .card {
-    font-family: Merriweather, serif;
-    line-height: 1.6em;
+    font-family:Merriweather, serif;
+    line-height:1.6em;
 }
 .ns7r .strips {
-    font-size: 95%;
-    font-weight: 300;
+    font-size:95%;
+    font-weight:300;
 }
 .ns7r h2 {
-     font-family: Oxygen, sans-serif;
+    font-family:Oxygen, sans-serif;
+    font-weight:400;
 }
-.sidebar{
+.sidebar {
     font-family:'Open Sans', sans-serif;
     font-size:95%
 }
-.sidebar strong{
+.sidebar strong {
     font-weight:600;
 }
-.sidebar h3{    
+.sidebar h3 {
     font-weight:600;
+}
+code {
+    font-family:Consolas, 'Source Code Pro', monospace;
 }
