--- a/fonts.css
+++ b/fonts.css
@@ -1,8 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic,900,900italic,300,300italic&subset=latin,latin-ext);
-@import url(https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic&subset=latin,latin-ext);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
-@import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro);
+@import url(https://fonts.googleapis.com/css?family=Oxygen|Source+Code+Pro|Open+Sans:400,600,400italic,600italic|Lora:400,400italic|Merriweather:400,400italic,700,700italic);
 .ns7r .name {
     font-family:'Open Sans', sans-serif;
     font-weight:300;
