Strip borders: white on normal, light gray only on hover

--- a/ns7r.css
+++ b/ns7r.css
@@ -104,11 +104,11 @@
 }
 
 .list-group-item.strip {
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid white;
 }
 
 .list-group-item:first-child.strip {
-    border-top: 1px solid #eee;
+    border-top: 1px solid white;
 }
 
 .list-group-item.strip {
