--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@
         background-color:#f8f8ff;
         border-radius:2px;
     }
+    .card:hover .list-group-item.strip {
+        border-bottom: 1px solid #eee;
+    }
+    .card:hover .list-group-item:first-child.strip {
+        border-top: 1px solid #eee;
+    }
     /* strips hover */
     .card:hover .strip:hover {
         background:#ffc;
