--- a/style.css
+++ b/style.css
@@ -65,10 +65,22 @@
         color:#eef !important;
     }
 }
+
+@media screen and (max-width: 999px) {
+    .ns7r.container {
+        padding: 1em;
+        margin: 1em;
+        width: auto;
+    }
+    .silver {
+        display: none;
+    }
+}
 @media screen and (min-width: 1000px) {
     body {
         background: #888;
     }
+
     .ns7r.container {
         background: #fffffc;
         width: 930px;
@@ -78,6 +90,40 @@
         margin-bottom: 8px;
         margin-top: 8px;
         box-shadow: 0 3px 3px 1px #666;
+    }
+}
+
+@media print {
+    .ns7r.container {
+        width: 930px;
+    }
+
+    .print-link i.fa {
+        display: none;
+    }
+
+    a[href].print-link::after {
+        display: inline !important;
+        content: " (" attr(href) ")";
+    }
+
+    .ns7r span[uib-tooltip],
+    .ns7r abbr[title] {
+        border-bottom: none;
+    }
+
+    .fa[print-alt] {
+        animation: none;
+        font: inherit !important;
+    }
+
+    .fa[print-alt]:before {
+        display: none !important;
+    }
+
+    .fa[print-alt]:after {
+        display: inline-flex;
+        content: attr(print-alt);
     }
 }
 /* FONTS */
