--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
     .card:hover {
         margin:0 -4px 0 -4em;
         border-top:none;
-        border-right:4px solid #f8f8f8;
-        border-left:4em solid #f8f8f8;
+        border-right:4px solid #f8f8ff;
+        border-left:4em solid #f8f8ff;
         background-color:#f8f8ff;
         border-radius:2px;
     }
@@ -59,10 +59,10 @@
         border-top:1px solid #ccc;
     }
     .silver {
-        color:#bbc !important;
+        color:#bbc;
     }
     .silver.fa-2x {
-        color:#eef !important;
+        color:#eef;
     }
 }
 
