--- a/fonts.css
+++ b/fonts.css
@@ -11,6 +11,7 @@
     font-family:Lora, serif;
     font-style:italic;
 }
+.ns7r .cgpa{    font-family:Lora, serif; font-size: 80%;}
 .ns7r .card {
     font-family:Merriweather, serif;
     line-height:1.5em;
