--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@
         background:#eee !important;
         border-top:4px solid #ccc;
     }
-    .sidebar h3 { margin-bottom:0; margin-top: .5em;}
+    .side-section h3.section-head { margin-bottom:0; margin-top: .5em;}
     .ns7r footer {
-        margin:45px -8px 4px -8px;
+        margin:40px -8px 4px -8px;
         background-color:#ddd !important;
         border:8px solid #ddd;
     }
