--- a/fonts.css
+++ b/fonts.css
@@ -1,42 +1,58 @@
 @import url(https://fonts.googleapis.com/css?family=Oxygen|Source+Code+Pro|Open+Sans:400,600,400italic,600italic|Lora:400,400italic|Merriweather:400,400italic,700,700italic);
 .ns7r .name {
-    font-family:'Open Sans', sans-serif;
-    font-weight:300;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
 }
 .ns7r .highlights {
-    font-family:Merriweather, serif;
+  font-family: Merriweather, serif;
+}
+.ns7r h2 {
+  font-family: Oxygen, sans-serif;
+  font-weight: 400;
+  font-size: 175%;
 }
 .ns7r .place-name,
 .ns7r .time-period {
-    font-family:Lora, serif;
-    font-style:italic;
+  font-family: Lora, serif;
+  font-style: italic;
 }
-.ns7r .cgpa{    font-family:Lora, serif; font-size: 80%;}
+.ns7r .cgpa {
+  font-family: Lora, serif;
+  font-size: 80%;
+}
 .ns7r .card {
-    font-family:Merriweather, serif;
-    line-height:1.5em;
+  font-family: Merriweather, serif;
+  line-height: 1.5em;
+}
+.ns7r h4 {
+  font-size: 100%;
+  font-weight: 700;
 }
 .ns7r .strips {
-    font-size:95%;
-    font-weight:300;
-}
-.ns7r h2 {
-    font-family:Oxygen, sans-serif;
-    font-weight:400;
+  font-size: 85%;
+  font-weight: 300;
+  line-height: 1.25;
 }
 .sidebar {
-    font-family:'Open Sans', sans-serif;
-    font-size:95%
-}
-.sidebar strong {
-    font-weight:600;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 95%
 }
 .sidebar h3 {
-    font-weight:600;
+  font-weight: 600;
+  font-size: 105%;
+}
+.sidebar strong {
+  font-weight: 600;
+}
+.ns7r footer {
+  font-size: 90%;
 }
 code {
-    font-family:Consolas, 'Source Code Pro', monospace;
+  font-family: Consolas, 'Source Code Pro', monospace;
 }
-body{
-    font-family:'Lora', sans-serif;
+body {
+  font-family: 'Lora', sans-serif;
+}
+.ns7r {
+  font-size: 14px;
 }
