--- a/style.css
+++ b/style.css
@@ -98,6 +98,15 @@
         margin-top: 8px;
         box-shadow: 0 3px 3px 1px #333;
     }
+    
+    .ns7r header:hover .profile-pic{
+        display: block;
+        margin-left: -140px;
+        margin-bottom: -128px;
+        border-radius: 64px;
+        border: 4px solid #eee;
+        box-shadow:0 0 1px #000;
+    }
 }
 
 @media print {
