loc icon spacing, etc.

--- a/ns7r.css
+++ b/ns7r.css
@@ -89,7 +89,7 @@
 
 .charcoal-dim { color: #666; }
 .charcoal { color: #555; }
-.charcoal-grey { color: #333; }
+.charcoal-grey { color: #3a3a3a; }
 
 .skills div,
 .side-note div {
